fix: arrows spacing

--- a/src/components/DatePicker/style.scss
+++ b/src/components/DatePicker/style.scss
@@ -112,7 +112,7 @@
         }
 
         & + .date-picker__switch-arrow {
-            margin-left: 15px;
+            margin-left: 25px;
         }
 
         &:disabled {
